apps/transmission/transmission-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: media-hub
  name: media-hub
spec: {}
