apps/transmission/transmission-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: transmissionvpn
  namespace: media-hub
spec:
  ports:
    - name: webui
      protocol: TCP
      port: 9091
      targetPort: 9091
    - name: peer
      protocol: TCP
      port: 51413
      targetPort: 51413
  selector:
    app: transmissionvpn
  type: ClusterIP
