apps/transmission/transmission-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmissionvpn
  namespace: media-hub
spec:
  ingressClassName: "nginx"
  rules:
  - host: "transmission.10.0.1.253.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmissionvpn
            port:
              number: 9091
